# TomeScrub

./: .gitignore  CHANGELOG.md  README.md  pp_python copy.md  pyproject.toml  requirements.txt
configs/: example.toml
configs/profiles/: defaults.toml  fast.toml  strict.toml  web.toml
docs/: USAGE.txt
src/pdf_cleaner/: __init__.py  __main__.py  cli.py  watermarks.py
src/tomescrub/: __init__.py  __main__.py  cli.py  passwords.py  pipeline.py  processor.py  sanitizer.py  save_backends.py  watermarks.py
src/tomescrub/config/: __init__.py  defaults.toml  loader.py  schema.py
tests/: test_config.py  test_processor.py  test_save_backends.py
