[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-cleaner"
version = "0.1.0"
description = "Utilities for cleaning PDF documents with PyMuPDF."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pat", email = "pat_n@example.com" },
]
dependencies = [
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
